--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,19 @@ section#header  {
     min-width: 46vw;
 }
 
+#login_link_row {
+    z-index: 3000;
+}
+
+#btn_close_backups {
+    position:relative;
+    top: 1vh;
+    right: -80vw;
+    width: 15px;
+    height: 15px;
+    background: rgba(209,0,0,0.65);
+}
+
 .changes_detected {
     width: 1rem;
     height: 1rem;
